Loqate/main/default/objects/Business__c/Business__c.object-meta.xml
<CustomObject>
    <description>Custom business fields which Postcode Anywhere should integrate with</description>
    <label>Business Integration</label>
    <nameField>
        <label>Business Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>