Loqate/main/default/objects/Business__c/fields/Ceo_Field__c.field-meta.xml
<CustomField>
    <fullName>Ceo_Field__c</fullName>
    <label>Ceo Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>