Loqate/main/default/objects/Business__c/fields/City_Field__c.field-meta.xml
<CustomField>
    <fullName>City_Field__c</fullName>
    <label>City Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>