Loqate/main/default/objects/Business__c/fields/Company_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Field__c</fullName>
    <label>Company Name Field</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>