Loqate/main/default/objects/Business__c/fields/Country_Field__c.field-meta.xml
<CustomField>
    <fullName>Country_Field__c</fullName>
    <label>Country Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>