Loqate/main/default/objects/Business__c/fields/Domestic_Ultimate_Company_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_Company_Name_Field__c</fullName>
    <label>Domestic Ultimate Company Name Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>