Loqate/main/default/objects/Business__c/fields/Domestic_Ultimate_DUNS_Field__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_DUNS_Field__c</fullName>
    <label>Domestic Ultimate DUNS Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>