Loqate/main/default/objects/Business__c/fields/DUNS_Field__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Field__c</fullName>
    <label>DUNS Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>