Loqate/main/default/objects/Business__c/fields/Fax_Field__c.field-meta.xml
<CustomField>
    <fullName>Fax_Field__c</fullName>
    <label>Fax Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>