Loqate/main/default/objects/Business__c/fields/Global_Ultimate_Company_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_Company_Name_Field__c</fullName>
    <label>Global Ultimate Company Name Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>