Loqate/main/default/objects/Business__c/fields/Global_Ultimate_DUNS_Field__c.field-meta.xml
<CustomField>
    <fullName>Global_Ultimate_DUNS_Field__c</fullName>
    <label>Global Ultimate DUNS Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>