Loqate/main/default/objects/Business__c/fields/Location_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Location_Type_Field__c</fullName>
    <label>Location Type Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>