Loqate/main/default/objects/Business__c/fields/Naics_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>Naics_Code_Field__c</fullName>
    <label>Naics Code Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>