Loqate/main/default/objects/Business__c/fields/Naics_Description_Field__c.field-meta.xml
<CustomField>
    <fullName>Naics_Description_Field__c</fullName>
    <label>Naics Description Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>