Loqate/main/default/objects/Business__c/fields/Parent_Company_Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Company_Name_Field__c</fullName>
    <label>Parent Company Name Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>