Loqate/main/default/objects/Business__c/fields/Parent_DUNS_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_DUNS_Field__c</fullName>
    <label>Parent DUNS Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>