Loqate/main/default/objects/Business__c/fields/Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>