Loqate/main/default/objects/Business__c/fields/Sales_Field__c.field-meta.xml
<CustomField>
    <fullName>Sales_Field__c</fullName>
    <label>Sales Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>