Loqate/main/default/objects/Business__c/fields/Sales_Range_Field__c.field-meta.xml
<CustomField>
    <fullName>Sales_Range_Field__c</fullName>
    <label>Sales Range Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>