Loqate/main/default/objects/Business__c/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <referenceTo>Setting__c</referenceTo>
    <relationshipName>Businesses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>