Loqate/main/default/objects/Business__c/fields/SIC_Code_Field__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_Field__c</fullName>
    <label>SIC Code Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>