Loqate/main/default/objects/Business__c/fields/SIC_Description_Field__c.field-meta.xml
<CustomField>
    <fullName>SIC_Description_Field__c</fullName>
    <label>SIC Description Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>