Loqate/main/default/objects/Business__c/fields/Site_Employees_Field__c.field-meta.xml
<CustomField>
    <fullName>Site_Employees_Field__c</fullName>
    <label>Site Employees Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>