Loqate/main/default/objects/Business__c/fields/State_Field__c.field-meta.xml
<CustomField>
    <fullName>State_Field__c</fullName>
    <label>State Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>