Loqate/main/default/objects/Business__c/fields/Street_Field__c.field-meta.xml
<CustomField>
    <fullName>Street_Field__c</fullName>
    <label>Street Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>