Loqate/main/default/objects/Business__c/fields/Total_Employees_Field__c.field-meta.xml
<CustomField>
    <fullName>Total_Employees_Field__c</fullName>
    <label>Total Employees Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>