Loqate/main/default/objects/Business__c/fields/Use_Address_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Use_Address_Integrations__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Select this option to let the address integrations handle the addresses. This will make all address fields already on the page available.</inlineHelpText>
    <label>Use Address Integrations</label>
    <type>Checkbox</type>
</CustomField>