Loqate/main/default/objects/Business__c/fields/Year_Started_Field__c.field-meta.xml
<CustomField>
    <fullName>Year_Started_Field__c</fullName>
    <label>Year Started Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>